crates/nargo_cli/tests/compile_failure/div_by_zero_numerator_witness/src/main.nr
use dep::std;

fn main(x: Field) {
    let a: Field = x / 0;
    std::println(a);
}
